recursion.lessons.recursion.koch.Koch.scala.error
Koch:23: error: expected start of definition
	override def run() {
                 ^Koch:26: error: Unmatched closing brace '}' ignored here
}
^